--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
         <h1>My First Heading</h1>
         <p>My first paragraph.</p>
 
+        <p> I added a new element for this commit</p>
+
     </body>
 </html>
