--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
     <body>
-
+        
         <h1>My First Heading</h1>
-        <p>My first paragraph.</p>
-
-        <p> I added a new element for this commit</p>
+        <section> 
+            <p>My first paragraph.</p>
+            <p> I added a new element for this commit</p>
+        </section>
+        
 
     </body>
 </html>
